[gd_scene load_steps=16 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://ClearingEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://ARVROrigin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Start.tscn" type="PackedScene" id=4]
[ext_resource path="res://Beach.tscn" type="PackedScene" id=5]
[ext_resource path="res://Clearing.tscn" type="PackedScene" id=6]
[ext_resource path="res://Peak.tscn" type="PackedScene" id=7]
[ext_resource path="res://Dock.tscn" type="PackedScene" id=8]
[ext_resource path="res://Players.gd" type="Script" id=9]
[ext_resource path="res://voip.gd" type="Script" id=10]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=11]
[ext_resource path="res://models/Water.material" type="Material" id=12]
[ext_resource path="res://Player.tscn" type="PackedScene" id=13]

[sub_resource type="AudioStreamMicrophone" id=1]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 700, 700 )
subdivide_width = 200
subdivide_depth = 200

[node name="Main" type="Spatial" groups=[
"Main",
]]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="ARVROrigin" parent="." instance=ExtResource( 3 )]

[node name="Start" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.392161, 0, 0.919897, 0, 0.999999, 0, -0.919897, 0, -0.392161, 39.9439, 8.51811, -16.8076 )

[node name="Beach" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -7, 1.729, -23.9507 )

[node name="Clearing" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 11.9502, 8, -0.0514842 )

[node name="Peak" parent="." instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -23.571, 4.161, -15.0404 )

[node name="Dock" parent="." instance=ExtResource( 8 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 4, 0.75, 35 )

[node name="Players" type="Spatial" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 9 )

[node name="Player_0" parent="Players" instance=ExtResource( 13 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -5, 0.7, -33 )

[node name="Player_1" parent="Players" instance=ExtResource( 13 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -4, 0.75, -34 )

[node name="Player_2" parent="Players" instance=ExtResource( 13 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -4, 0.75, -36 )

[node name="Player_3" parent="Players" instance=ExtResource( 13 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -5, 0.75, -37 )

[node name="Tween" type="Tween" parent="."]

[node name="Input" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="VOIP" type="Node" parent="."]
script = ExtResource( 10 )

[node name="VOIPTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Terrain" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00486946, 0, -0.0204639 )

[node name="Water" type="MeshInstance" parent="Terrain"]
mesh = SubResource( 2 )
material/0 = ExtResource( 12 )
[connection signal="timeout" from="VOIPTimer" to="VOIP" method="_on_VOIPTimer_timeout"]
